[package]
name = "rust-call"
version = "0.3.0"
authors = ["bingryan <bingryan@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Make remote development more elegant"
readme = "README.md"
repository = "https://github.com/bingryan/call"
homepage = "https://github.com/bingryan/call"
keywords = ["cli", "call", "remote", "build"]
categories = ["command-line-utilities"]
exclude = [
    "docs/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "call"

[dependencies]
config = "0.11" # read config
clap = "2.33.3" # parse command
anyhow = "1.0.36" # capture Errors
log = "0.4.11" # logging
yaml-rust = "0.4" # parse yaml string or serialize it to yaml string
dirs = "2.0" # get full path depends on system eg:$HOME == "/home/username/"
ignore = "0.4.17" # recursive directory iterator with some file filters
cmd_lib = "1.0.10" # 启动子进程运行命令
# console process
console = "0.14.0" # 提供友好的terminal控制
indicatif = "0.15.0" # 提供可以报告进度的命令行接口

# Serialize, Deserialize
serde = "1.0.128"
serde_derive = "1.0.128"
